fix: remove overflow-x extend by footer's animation in menu

--- a/src/mainPage/containers/menu/menu.module.css
+++ b/src/mainPage/containers/menu/menu.module.css
@@ -1,6 +1,7 @@
 .showRoom {
     padding-bottom: 160px;
     color: #adb4b0;
+    overflow-x: hidden;
 }
 
 .foodElement {
